# discordant

./: Cargo.toml  README.md
discordant_types/: Cargo.toml  README.md
discordant_types/src/: application.rs  application_command.rs  channel.rs  emoji.rs  guild.rs  handler.rs  interaction.rs  interaction_response.rs  lib.rs  permission.rs  snowflake.rs  sticker.rs  team.rs  user.rs
discordant_util/: Cargo.toml  README.md
discordant_util/src/: handler.rs  lib.rs
src/: application.rs  application_command.rs  channel.rs  emoji.rs  guild.rs  interaction.rs  interaction_response.rs  lib.rs  permission.rs  sticker.rs  team.rs  user.rs
