[package]
name = "discordant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136 ", features = ["derive"] }
serde_json = "1.0.78"
serde_repr = "0.1.7"
sodiumoxide = "0.2.7"
