[package]
name = "discordant_types"
version = "0.1.0"
edition = "2021"
description = "Raw types for interacting with Discord"
homepage = "https://github.com/devnought/discordant"
keywords = ["discord"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devnought/discordant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144 ", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
