[package]
name = "discordant_util"
version = "0.3.0"
edition = "2021"
description = "Utility functions and types for creating Discord bots"
homepage = "https://github.com/devnought/discordant"
keywords = ["discord"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devnought/discordant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discordant_types = { path = "../discordant_types", version = "0.3.0" }
http = "0.2.9"
ed25519-dalek = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.39"
